# semantic_safety_iros

./: .gitignore  .gitmodules  build_robot_ws.sh  cloud_merger.py  environment.yml  gimbal_test.py  jetson_install.sh  read_servo_zero.py  semantic_poisson.cpp  setup_env.sh  walkthrough.md  yolo_zed_ros.py
PoissonZO/: CMakeLists.txt  test_gradient_viz.py
PoissonZO/src/: main.cpp
robot_ws/: QUICKSTART.md
robot_ws/src/: CMakeLists.txt
robot_ws/src/config/: MID360_config.json  pointclouds.rviz
robot_ws/src/docs/: KEYBOARD_CONTROLS.md  semantic_safety_filter.md  social_navigation.md  xbox_controller_teleop.md
robot_ws/src/docs/scripts/: generate_occupancy_grid.py  plot_boundary_vectors.py  plot_guidance_field_comparison.py  plot_obstacle_human_combined.py  plot_obstacle_human_combined_path.py  plot_social_bias_layers.py  plot_temporal_derivative.py
robot_ws/src/include/poisson/: cloud_merger.bk  cloud_merger.h  human_tracker.h  mpc_cbf_3d.h  poisson.h  utils.h
robot_ws/src/launch/: camera_realsense.launch.py  camera_zed.launch.py  semantic_safety.launch.py
robot_ws/src/scripts/: human_tracking.py  teleop_controller.py  yolo_detector.py
robot_ws/src/src/: poisson.cpp  semantic_poisson.cpp  teleop.cpp  utils.cpp
submodules/: install.sh  source_all.sh
